export type FarmerNote = "Positive" | "Neutral" | "Negative"