export enum Note {
  NEUTRAL = 'Neutral',
  POSITIVE = 'Positive',
  NEGATIVE = 'Negative'
}