from enum import Enum


class ProblemType(Enum):
    WEATHER = 'weather'
    INSECTS = 'insects'
    NEGATIVE_NOTE = 'negative note'
    OTHER = 'other'
