@startuml Class

' skinparam linetype polyline
' skinparam linetype ortho

enum Note {
    Positive
    Neutral
    Negative
}
enum VisitReason {
    NegativeNote
    Casual
    AgronomistDecision
}
class ProblemType {
    +id
    +name
    +nAdditionalVisits
}
enum WeatherType {
    Sunny
    MostlyCloudy
    Cloudy
    Rainy
    Lightning
}
enum VisitState {
    planned
    confirmed
    rejected
}

abstract class User {
    +email
    +name
    +surname
    +password
}
class PolicyMaker
class Agronomist
class Farmer
class FarmerNote {
    +id
    +note: Note
    +date
}
class Farm {
    +id
    +waterIrrigationSystemID
    +sensorSystemID
    +adressLine1
    +adressLine2
    +postalCode
    +city
    +createDate
}
class Mandal {
    +id
    +name
}
class Production {
    +id
    +amount
    +date
}

class WaterIrrigationSystemResponse {
    +id
    +waterUsed
    +date
}
class SensorSystemResponse {
    +id
    +sensorId
    +humidity
    +date
}
class WeatherSystemResponse {
    +id
    +degrees
    +rainfall
    +type: WeatherType
    +date
}

class ProductionType {
    +id
    +name
}
class HelpRequest {
    +id
    +topic
    +message
    +createDateTime
    +isAutoGenerated
}
class HelpResponse {
    +id
    +message
    +createDateTime
}
class Visit {
    +id
    +comment
    +date
    +state: VisitState
    +reason: VisitReason
} 
class ForumThread {
    +id
    +topic
    +description
    +createDateTime
}
class ForumComment {
    +id
    +content
    +createDateTime
}
class Suggestion {
    +id
    +text
}

PolicyMaker <|-- User
Agronomist <|-- User
Farmer <|-- User


Farm "0..*" o-- "1" Mandal : belongs to >
Farm "1" *-- "0..*" Production : produces >
Farm "1" *-u- "0..*" WaterIrrigationSystemResponse : has >
Farm "1" *-- "0..*" SensorSystemResponse : has >

Mandal "1" *-l- "0..*" WeatherSystemResponse : has >

Agronomist "1..*" o-- "1..*" Mandal : is responsible for >
Production "0..*" o-- "1" ProductionType : has >

Farm "1" -r-* "1" Farmer : has <
Farmer "1" *-- "0..*" FarmerNote : receives >
FarmerNote "0..*" o-- "1" PolicyMaker : gives <

Farmer "1" *-- "0..*" HelpRequest : creates >
Farmer "0..*" --o "0..*" HelpRequest : receives > 
Agronomist "1..*" --o "0..*" HelpRequest : receives > 
HelpRequest "1" *-r- "0..*" HelpResponse : contains >
HelpResponse "0..*" o-- "0..1" Farmer : creates <
HelpResponse "0..*" o-- "0..1" Agronomist : creates <
'XOR 

ProblemType "0..1" - "0..*" FarmerNote : has <

Agronomist "1" *-- "0..*" Visit : does >
Visit "0..*" o-- "1" Farm : refers to >

ForumThread "1" *-- "0..*" ForumComment : has >
ForumThread "0..*" o-- "1" Farmer : creates <
ForumComment "0..*" o-- "1" Farmer : creates <

Suggestion "0..*" o-- "1..*" Mandal : concerns >
Suggestion "0..*" o-- "1..*" ProductionType : concerns > 

@enduml